--- a/HTML/login.html
+++ b/HTML/login.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -50,4 +50,4 @@
     <script src="/JS/ecommerce.js"></script>
     <script src="/JS/homecart.js"></script>
     <script src="/JS/cart.js"></script>
-</html> -->
+</html>
