--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -75,4 +75,4 @@
     <script src="/JS/ecommerce.js"></script>
     <script src="/JS/homecart.js"></script>
 </body>
-</html> -->
+</html>
