--- a/HTML/register.html
+++ b/HTML/register.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -51,4 +51,4 @@
     <script src="/JS/homecart.js"></script>
     <script src="/JS/cart.js"></script>
 </body>
-</html> -->
+</html>
