--- a/HTML/register.html
+++ b/HTML/register.html
@@ -42,7 +42,7 @@
         <input type="text" placeholder="Password">
     </div>
     <br>
-    <p class="para">Already has an account?<a href="/login.html">Login</a></p>    
+    <p class="para">Already has an account?<a href="/HTML/login.html">Login</a></p>    
     <br>
     <button class="registerbtn">Register</button>
     <br>
