--- a/HTML/about.html
+++ b/HTML/about.html
@@ -72,8 +72,8 @@
     </div>
     <br><br>
     <h3 class="Achievers">Made with <i class="fa-solid fa-heart clr "></i> by Harikrishna</h3>
+    <script src="/JS/cartService.js"></script>
     <script src="/JS/ecommerce.js"></script>
     <script src="/JS/homecart.js"></script>
-    <script src="/JS/cart.js"></script>
 </body>
 </html>
