--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -50,7 +50,7 @@
             <div class="Summary">
                 <div class="cartProducts">
                     <p>Products  (0)</p>
-                    <p>$1352</p>
+                    <p>$0.00</p>
                 </div>
                 <br>
                 <div class="cartshipping">
@@ -60,7 +60,7 @@
                 <br>
                 <div class="carttotal">
                     <p>Total Amount</p>
-                    <p>$3000</p>
+                    <p>$0.00</p>
                 </div>
                 <br>
                 <div class="checkout">
@@ -71,8 +71,7 @@
         </div>
     </div>
     <h3 class="Achievers">Made with <i class="fa-solid fa-heart clr "></i> by Harikrishna</h3>
+    <script src="/JS/cartService.js"></script>
     <script src="/JS/cart.js"></script>
-    <script src="/JS/ecommerce.js"></script>
-    <script src="/JS/homecart.js"></script>
 </body>
 </html>
