--- a/HTML/login.html
+++ b/HTML/login.html
@@ -47,7 +47,7 @@
     <br>
     <h3 class="Achievers">Made with <i class="fa-solid fa-heart clr "></i> by Harikrishna</h3>
 </body>
+    <script src="/JS/cartService.js"></script>
     <script src="/JS/ecommerce.js"></script>
     <script src="/JS/homecart.js"></script>
-    <script src="/JS/cart.js"></script>
 </html>
