--- a/HTML/products.html
+++ b/HTML/products.html
@@ -46,9 +46,9 @@
     </div>
     <h3 class="Achievers">Made with <i class="fa-solid fa-heart clr "></i> by Harikrishna</h3>
     <br><br>
+    <script src="/JS/cartService.js"></script>
     <script src="/JS/ecommerce.js"></script>
     <script src="/JS/homecart.js"></script>
-    <script src="/JS/cart.js"></script>
     
 </body>
 </html>
